--- a/src-theme/core/styles/vt-doc-code.css
+++ b/src-theme/core/styles/vt-doc-code.css
@@ -63,7 +63,7 @@
   padding: 13px 0 11px;
   width: 100%;
   line-height: 24px;
-  font-family: var(--font-family-mono);
+  font-family: var(--vt-font-family-mono);
   font-size: 14px;
   user-select: none;
   overflow: hidden;
@@ -92,7 +92,7 @@
   width: 32px;
   text-align: center;
   line-height: 24px;
-  font-family: var(--font-family-mono);
+  font-family: var(--vt-font-family-mono);
   font-size: 14px;
   color: var(--vt-c-text-3);
   transition: border-color .5s, color .5s;
